Add dimension teleportation support
Implemented dimension teleportation for players and world, including handling dimension change packets, client world updates, and UI enhancements for debugging.